# agentic-apps

network_of_assistants/: agp-config.yaml  docker-compose.yaml
network_of_assistants/agp/: pyproject.toml
network_of_assistants/moderator/: Dockerfile  main.py  pyproject.toml
network_of_assistants/pdf_assistant/: Dockerfile  main.py  pyproject.toml
network_of_assistants/user_proxy/: Dockerfile  main.py  pyproject.toml
