[project]
name = "moderator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agp",
    "langchain>=0.3.23",
    "langchain-openai>=0.3.12",
    "pydantic-settings>=2.8.1",
]

[tool.uv.sources]
agp = { workspace = true }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
moderator = "main:run"
