[project]
name = "user-proxy"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "agp"
]

[tool.uv.sources]
agp = { workspace = true }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
user-proxy = "main:run"
